Revert "Pankaj , Bijayini | #3170 | Only on iPad: On selecting coded answer for concept other option for that concept get's miss aligned. -- fixed"
This reverts commit 6acc2633b6558054e94051ca8db3f96cc2342690.

--- a/ui/app/styles/bahmni-components/_buttons.scss
+++ b/ui/app/styles/bahmni-components/_buttons.scss
@@ -349,7 +349,6 @@ button.back-btn {
         overflow: hidden;
         text-overflow: ellipsis;
         text-align: left;
-        height: 32px !important;
     }
 }
 .multi-select-button-group { width: 600px; }
